--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <section id="lista-nosotros">
       <article class="noticia">
-        <h2>Amantes de la naturaleza</h2>
+        <h1>Amantes de la naturaleza</h1>
         <img class="noticia__img--right"
           src="https://images.unsplash.com/photo-1526779259212-939e64788e3c?q=80&w=1748&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="">
@@ -67,7 +67,7 @@
             Houser</a> en <a
             href="https://unsplash.com/es/fotos/hombre-sentado-en-la-roca-rodeado-de-agua--Q_t4SCN8c4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
         </figcaption>
-        <p>Un amante de la naturaleza es una persona que encuentra bienestar en la conexión con su entorno natural,
+        <p>Un amante de la naturaleza es una <strong>persona que encuentra bienestar en la conexión con su entorno natural</strong>,
           caracterizándose por su capacidad de asombro, su búsqueda de tranquilidad y la inspiración que encuentra en
           los
           elementos naturales como amaneceres o paisajes. Estas personas suelen ser reflexivas, flexibles, adaptables y
@@ -149,7 +149,7 @@
         <p>Sentirse parte de un sistema más grande, como el ecosistema, refuerza nuestro bienestar y puede inspirar una
           mayor empatía y conexión con los demás.</p>
       </div>
-      <div>
+      <!-- <div>
 
         <h2>Cómo conectar con la naturaleza</h2>
 
@@ -161,7 +161,33 @@
         </p>
         <h3>En el día a día:</h3>
         <p>Puedes traer la naturaleza a tu vida a través de plantas en casa, en un balcón o en un jardín pequeño.</p>
+      </div> -->
+
+<!--       paneles desplegables    -->
+  <div id="paneles-content">
+    <h2>Cómo conectar con la naturaleza</h2>
+    <div class="paneles">
+      <div class="panel">
+        <input type="radio" name="panel" class="panel-input" id="panel1">
+        <label for="panel1">Actividades al aire libre:</label>
+        <div class="contenido"><p>Caminar, correr, hacer yoga o nadar en la naturaleza son formas de conectar.</p>
+        </div>
       </div>
+        <div class="panel">
+          <input type="radio" name="panel" class="panel-input" id="panel2">
+          <label for="panel2">Observación:</label>
+          <div class="contenido"><p>Simplemente sentarse, observar un paisaje, escuchar los sonidos o sentir texturas puede ser muy beneficioso.</p>
+          </div>
+        </div>
+          <div class="panel">
+            <input type="radio" name="panel" class="panel-input" id="panel3">
+            <label for="panel3">En el día a día:</label>
+            <div class="contenido"><p>Puedes traer la naturaleza a tu vida a través de plantas en casa, en un balcón o en un jardín pequeño.</p>
+            </div>
+          </div>
+
+      </div>
+   </div>
 
     </section>
 
