--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -22,7 +22,7 @@
 
     <a class="menu-desplegable" href="../index.html"><img src="../image/mundonatural.png" alt="logo de inicio"></a>
     <ul class="menu-desplegable">
-      <li><a href="">Nosotros</a></li>
+      <li><a href="nosotros.html">Nosotros</a></li>
       <li><a href="">Servicios</a></li>
       <li><a href="">galeria</a></li>
     </ul>
@@ -49,8 +49,7 @@
       excursiones. Cada imagen cuenta una historia de aventura y conexión con el entorno natural. ¡Inspírate para tu
       próxima escapada!</p>
 
-    <!-- Galeria -->
-    <div class="galeria">
+    <div class="noticia">
       <div>
         <h2>1. Parque Natural La Pedriza</h2>
         <img class="noticia__img--right" src="../image/Rio-manzanares-la-pedriza.jpg" alt="imagen1" />
@@ -123,16 +122,16 @@
   </main>
   <!-- Pie de página -->
   <footer>
-    <a href="#galeria" id="boton-arriba2">
-      <svg  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-        stroke="currentColor" class="size-6">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
-      </svg>
-    </a>
+    <p>
+      <a href="#galeria">
+        <svg id="boton-arriba2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+          stroke="currentColor" class="size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
+        </svg>
+      </a>
+    </p>
     <p>Derechos reservados © 2025</p>
   </footer>
-
-
 </body>
 
 </html>
