arreglo rutas martes 21

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -27,10 +27,10 @@
     <ul class="menu-desplegable">
       <!-- <li><a href="#lista-nosotros">Nosotros</a></li> -->
       <!-- <li><a href="pages/checked.html">Nosotros</a></li> -->
-      <li><a href="../index.html">Nosotros</a></li>
-      <li><a href="galeria.html">Servicios</a></li>
+      <li><a href="nosotros.html">Estudio</a></li>
+      <li><a href="galeria.html">Paseos</a></li>
       <li><a href="float.html">Contacto</a></li>
-      <li><a href="paneles.html">Paneles</a></li>
+      <!-- <li><a href="paneles.html">Paneles</a></li> -->
     </ul>
   </nav>
 
