--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -22,9 +22,9 @@
 
     <a class="menu-desplegable" href="../index.html"><img src="../image/mundonatural.png" alt="logo de inicio"></a>
     <ul class="menu-desplegable">
-      <li><a href="nosotros.html">Nosotros</a></li>
-      <li><a href="">Servicios</a></li>
-      <li><a href="">galeria</a></li>
+      <li><a href="nosotros.html">Estudio</a></li>
+      <li><a href="galeria.html">Paseos</a></li>
+      <li><a href="float.html">Contacto</a></li>
     </ul>
   </nav>
 
@@ -51,7 +51,7 @@
 
     <div class="noticia">
       <div>
-        <h2>1. Parque Natural La Pedriza</h2>
+        <h2> 1. Parque Natural La Pedriza</h2>
         <img class="noticia__img--right" src="../image/Rio-manzanares-la-pedriza.jpg" alt="imagen1" />
         <p>El Parque Regional la Pedriza es una de las <strong>zonas más populares de la sierra de Guadarrama</strong> y
           uno de los parques naturales cerca de Madrid preferidos por los escaladores y senderistas. Vienen atraídos a
@@ -61,10 +61,13 @@
           especialmente en las estaciones del año más frías. En verano es un buen momento para refrescarse con el agua
           del <strong>río Manzanares</strong> , que recorre uno de los enclaves más típicos de la naturaleza cerca de
           Madrid.</p>
+          <p>15,6 km.
+            5 h 42 m.
+          </p>
 
       </div>
       <div>
-        <h2>2. Embalse de El Atazar</h2>
+        <h2> 2. Embalse de El Atazar</h2>
         <img class="noticia__img--left" src="../image/El-Atazar.jpg" alt="imagen2" />
         <p>En la sierra Norte se encuentra este embalse a una hora de Madrid, también es conocido por su enorme tamaño
           como <strong>El mar de Madrid</strong>. Forma parte del Canal de Isabel II y está rodeado por la denominada
@@ -75,7 +78,7 @@
         </p>
       </div>
       <div>
-        <h2>3. Lagunas de Peñalara</h2>
+        <h2> 3. Lagunas de Peñalara</h2>
         <img class="noticia__img--right" src="../image/Lagunas-Peñalara.jpg" alt="imagen3" />
         <p>El Parque Natural de Peñalara es otro de los sitios para visitar en Madrid en la naturaleza: alberga el pico
           más alto de la Sierra de Guadarrama y una <strong>serie de lagunas de origen glaciar</strong>. Hay rutas
@@ -86,7 +89,7 @@
           accesible de unos 6 kilómetros de ida y vuelta.</p>
       </div>
       <div>
-        <h2>4. Puerto de Canencia</h2>
+        <h2> 4. Puerto de Canencia</h2>
         <img class="noticia__img--left" src="../image/Puerto-Canencia.jpg" alt="imagen4" />
         <p>A una hora y cuarto de la capital encontramos este tesoro de la naturaleza madrileña, un <strong>abedular con
             arroyo incluido</strong>. El Puerto de Canencia está repleto de cascadas y de rutas senderistas, pero la más
@@ -96,7 +99,7 @@
           hacer algo de turismo local dentro de Madrid.</p>
       </div>
       <div>
-        <h2>5. Las Cárcavas</h2>
+        <h2> 5. Las Cárcavas</h2>
         <img class="noticia__img--right" src="../image/Carcavas-madrid.jpg" alt="imagen5" />
         <p>La ruta para llegar a Las Cárcavas comienza en la <strong>presa de Pontón de la Oliva</strong>, justo en la
           frontera entre la Comunidad de Madrid y Guadalajara. Este paisaje protegido —parecido al que podemos encontrar
@@ -104,9 +107,12 @@
             tierras</strong> con poca sujeción vegetal.</p>
         <p>Para llegar hasta ellas hay <strong> dos caminos</strong>: uno corta, de unas dos horas, con una gran cuesta
           inicial, pero más directa a las Cárcavas, y otro más largo y circular, pensada para pasar el día.</p>
+        <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia: <strong>12 km.</strong></p>
+        <p><img class="noticia__img--none" src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png" alt="crono" />Duración: <strong>3:30 horas.</strong></p>
+      
       </div>
       <div>
-        <H2>6. El bosque finlandés</H2>
+        <H2> 6. El bosque finlandés</H2>
         <img class="noticia__img--left" src="../image/Bosque-Finlandes-Rascafria.jpg" alt="imagen6" />
         <p>En Rascafría, uno de los pueblos más fríos de Madrid, hay un paraje de <strong>abedules, chopos y abetos que
             se ha apodado como el bosque finlandés</strong>.</p>
@@ -114,7 +120,7 @@
           de madera incluida, que está justo en frente del
           <strong>Real Monasterio de Santa María de El Paular</strong>. El paseo siguiendo el río Lozoya es sencillo y
           tiene un encanto especial en cada época del año gracias a los árboles de hoja caduca que lo rodean.
-        </p>
+        </p> 
       </div>
     </div>
 
