--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Blog de Naturaleza</title>
   <link rel="stylesheet" href="styles/styles.css">
-  <link rel="shortcut icon" href="image/header.png" type="image/x-icon">
+  <link rel="shortcut icon" href="image/arbol.png" type="image/x-icon">
 </head>
 
 <body>
@@ -57,8 +57,9 @@
    <button onclick="calcularEdad()">Calcula tu Edad</button> -->
 
     <section id="lista-nosotros">
+      <h1>Amantes de la naturaleza</h1>
       <article class="noticia">
-        <h1>Amantes de la naturaleza</h1>
+        
         <img class="noticia__img--right"
           src="https://images.unsplash.com/photo-1526779259212-939e64788e3c?q=80&w=1748&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="">
@@ -67,16 +68,15 @@
             Houser</a> en <a
             href="https://unsplash.com/es/fotos/hombre-sentado-en-la-roca-rodeado-de-agua--Q_t4SCN8c4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
         </figcaption>
-        La calma y la importancia del respeto por la vida.</p>
+        <strong>La calma y la importancia del respeto por la vida.</strong>
         <div class="aside">
-          <p>I am aside!</p>
-          <p>The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international
-            pavilions, award-winning fireworks and seasonal special events.</p>
+          <p>Amantes de la naturaleza</p>
+          <p>Estas personas suelen ser <strong>reflexivas, flexibles, adaptables y
+          prudentes</strong>, gracias a las lecciones que extraen del propio medio ambiente, el cual les enseña sobre los ciclos.</p>
         </div>
         <p>Un <strong>amante de la naturaleza</strong> es una persona que encuentra bienestar en la <strong>conexión con su entorno</strong>
             natural, caracterizándose por su capacidad de <strong>asombro</strong>, su <strong>búsqueda de tranquilidad</strong> y la inspiración que encuentra en
-          los elementos naturales como amaneceres o paisajes. Estas personas suelen ser <strong>reflexivas, flexibles, adaptables y
-          prudentes</strong>, gracias a las lecciones que extraen del propio medio ambiente, el cual les enseña sobre los ciclos.
+          los elementos naturales como amaneceres o paisajes.</p>
       </article>
 
       <article>
@@ -136,7 +136,7 @@
         estrés, mejora el estado de ánimo, fomenta la creatividad y promueve un mayor bienestar psicológico y físico.
       </p>
 
-      <div>
+      <!-- <div>
         <h2>Beneficios para la felicidad</h2>
         <h3>Reduce el estrés y la ansiedad:</h3>
         <p>Estar en la naturaleza disminuye los niveles de cortisol, la hormona del estrés, y la rumia mental asociada a
@@ -152,7 +152,7 @@
         <h3>Fomenta la conexión:</h3>
         <p>Sentirse parte de un sistema más grande, como el ecosistema, refuerza nuestro bienestar y puede inspirar una
           mayor empatía y conexión con los demás.</p>
-      </div>
+      </div> -->
       <!-- <div>
 
         <h2>Cómo conectar con la naturaleza</h2>
@@ -167,8 +167,54 @@
         <p>Puedes traer la naturaleza a tu vida a través de plantas en casa, en un balcón o en un jardín pequeño.</p>
       </div> -->
 
+<!-- con checked-->
+     <div id="paneles-content">
+        <h2>Beneficios para la felicidad</h2>
+        <div class="paneles">
+          <div class="panel">
+            <input type="radio" name="panel" class="panel-input" id="panel1" checked>
+            <label for="panel1">Reduce el estrés y la ansiedad</label>
+            <div class="contenido">
+              <p>Estar en la naturaleza disminuye los niveles de cortisol, la hormona del estrés, y la rumia mental asociada a
+          la depresión y la ansiedad.</p>
+            </div>
+          </div>
+          <div class="panel">
+            <input type="radio" name="panel" class="panel-input" id="panel2">
+            <label for="panel2">Mejora el estado de ánimo</label>
+            <div class="contenido">
+              <p>El contacto con el entorno natural puede aumentar la felicidad, fomentar la calma y mejorar el estado general
+          de ánimo.</p>
+            </div>
+          </div>
+          <div class="panel">
+            <input type="radio" name="panel" class="panel-input" id="panel3">
+            <label for="panel3">Aumenta la creatividad y la función cognitiva</label>
+            <div class="contenido">
+              <p>El tiempo al aire libre puede estimular la creatividad, la atención y el desarrollo cognitivo.
+              </p>
+            </div>
+          </div>
+          <div class="panel">
+            <input type="radio" name="panel" class="panel-input" id="panel4">
+            <label for="panel4">Beneficia la salud física</label>
+            <div class="contenido">
+              <p>Respirar aire puro, fortalecer el sistema inmunológico y hacer actividad física en entornos naturales
+          contribuye a un mayor bienestar general.</p>
+            </div>
+          </div>
+          <div class="panel">
+            <input type="radio" name="panel" class="panel-input" id="panel5">
+            <label for="panel5">Fomenta la conexión</label>
+            <div class="contenido">
+              <p>Sentirse parte de un sistema más grande, como el ecosistema, refuerza nuestro bienestar y puede inspirar una
+          mayor empatía y conexión con los demás.</p>
+            </div>
+          </div>
+        </div>
+      </div>
       <!--       paneles desplegables    -->
-      <div id="paneles-content">
+      <!-- <div id="paneles-content">
         <h2>Cómo conectar con la naturaleza</h2>
         <div class="paneles">
           <div class="panel">
@@ -194,7 +240,7 @@
               </p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
 
     </section>
