--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Blog de Naturaleza</title>
-  <link rel="shortcut icon" href="../image/header.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../image/arbol.png" type="image/x-icon">
   <link rel="stylesheet" href="../styles/nosotros.css">
   <link rel="stylesheet" href="../styles/styles.css">
 </head>
@@ -35,7 +35,8 @@
   </nav>
 
 <main>
-  <h1 id="titulo-nosotros">Naturaleza en la Península Ibérica</h1>
+  <p id="titulo-nosotros"></p>
+  <h1>Naturaleza en la Península Ibérica</h1>
 
   <h2>Índice:</h2>
 
