--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         </div>
       </article>
 
-      <p>Sí, las personas que aman la naturaleza tienden a ser más felices debido a que el contacto con ella reduce el
-        estrés, mejora el estado de ánimo, fomenta la creatividad y promueve un mayor bienestar psicológico y físico.
+      <p>Sí, las personas que aman la naturaleza <strong>tienden a ser más felices</strong> debido a que el contacto con ella reduce el
+        <strong>estrés</strong>, mejora el <strong>estado de ánimo</strong>, fomenta la <strong>creatividad</strong> y promueve un mayor <strong>bienestar psicológico y físico</strong>.
       </p>
 
       <!-- <div>
@@ -167,7 +167,7 @@
         <p>Puedes traer la naturaleza a tu vida a través de plantas en casa, en un balcón o en un jardín pequeño.</p>
       </div> -->
 
-<!-- con checked-->
+<!-- con paneles-->
      <div id="paneles-content">
         <h2>Beneficios para la felicidad</h2>
         <div class="paneles">
@@ -214,66 +214,39 @@
         </div>
       </div>
       <!--       paneles desplegables    -->
-      <!-- <div id="paneles-content">
+      <div id="paneles-content">
         <h2>Cómo conectar con la naturaleza</h2>
         <div class="paneles">
           <div class="panel">
-            <input type="radio" name="panel" class="panel-input" id="panel1">
-            <label for="panel1">Actividades al aire libre</label>
+            <input type="radio" name="panel" class="panel-input" id="panel6" checked>
+            <label for="panel6">Actividades al aire libre</label>
             <div class="contenido">
               <p>Caminar, correr, hacer yoga o nadar en la naturaleza son formas de conectar.</p>
             </div>
           </div>
           <div class="panel">
-            <input type="radio" name="panel" class="panel-input" id="panel2">
-            <label for="panel2">Observación</label>
+            <input type="radio" name="panel" class="panel-input" id="panel7">
+            <label for="panel7">Observación</label>
             <div class="contenido">
               <p>Simplemente sentarse, observar un paisaje, escuchar los sonidos o sentir texturas puede ser muy
                 beneficioso.</p>
             </div>
           </div>
           <div class="panel">
-            <input type="radio" name="panel" class="panel-input" id="panel3">
-            <label for="panel3">En el día a día</label>
+            <input type="radio" name="panel" class="panel-input" id="panel8">
+            <label for="panel8">En el día a día</label>
             <div class="contenido">
               <p>Puedes traer la naturaleza a tu vida a través de plantas en casa, en un balcón o en un jardín pequeño.
               </p>
             </div>
           </div>
-        </div> -->
+        </div>
       </div>
 
     </section>
 
 
-    <section id="lista-contacto">
-      <article class="noticia">
-        <h2>Jugando antes de la cena</h2>
-        <img class="noticia__img--left"
-          src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
-          alt="">
-        <figcaption><a href="https://www.bearwitnessphoto.com/" target="_blank"><em>Johnny Hayward</em></a></figcaption>
-        <p>En las costas heladas de Manitoba (Canadá), <strong>un oso polar parece olvidarse por un momento de la
-            caza</strong> y se
-          tumba panza arriba sobre el hielo. Rodar de un lado a otro, frotarse contra la nieve o simplemente tumbarse en
-          el suelo gélido es parte de su comportamiento natural: con ello refrescan su cuerpo tras largas caminatas y,
-          de paso, mantienen limpia su densa capa de pelo, fundamental para regular el calor en un entorno tan extremo.
-        </p>
-        <p>La escena captada por el fotógrafo Johnny Hayward coincide con la llamada “<a
-            href="https://www.nationalgeographic.com.es/fotografia/foto-del-dia/jugando-antes-cena_26268"
-            target="_blank">temporada del
-            oso polar</a>” , cuando estos gigantes se concentran cerca de Churchill, el primer lugar de la bahía de
-          Hudson
-          donde se forma el hielo marino. Allí esperan el ansiado momento en que <strong>las aguas se congelen lo
-            suficiente
-            para salir a cazar focas</strong>. Hasta entonces, entre el hambre y la incertidumbre, algunos se regalan un
-          respiro
-          sobre la blanca alfombra helada, recordándonos que incluso los mayores depredadores del Ártico saben tomarse
-          un descanso.
-        </p>
-
-      </article>
-    </section>
+    
     <!-- <div class="caja" id="caja-azul">
       <p>
         <strong>AZUL</strong>
@@ -477,7 +450,7 @@
     frameBorder="0" allowfullscreen=""
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   <br><br>
-  <iframe width="50%" height="370" src="https://www.youtube.com/embed/rqKSFu6ehd0?list=RDrqKSFu6ehd0"
+  <iframe width="50%" height="370" src="https://www.youtube.com/embed/rqKSFu6ehd0?list=RDrqKSFu6ehd0%22
     title="Work Music for Focus &amp; Productivity | Calm Instrumental Background to Stay in Flow" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
