--- a/pages/float.html
+++ b/pages/float.html
@@ -1,59 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Cabecera -->
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documento</title>
-    <!--<link rel="stylesheet" href="../styles/styles.css">-->
-    <link rel="stylesheet" href="../styles/float.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Documento</title>
+  <!--<link rel="stylesheet" href="../styles/styles.css">-->
+  <link rel="stylesheet" href="../styles/float.css">
 </head>
+
 <body>
 
-<!-- <h1>🌞 Hola Mundo 🌍</h1> 
+  <!-- <h1>🌞 Hola Mundo 🌍</h1> 
    <input type="text" id="inputNombre" placeholder="Tu nombre aquí">
     <br>
     <button onClick="mostrarNombre()">Saluda</button> -->
 
-<!-- <br>
+  <!-- <br>
      <input type="number" placeholder="Pon tu año de nacimiento" id="inputAnioNac">
    <p id="resultado"></p>
    <button onclick="calcularEdad()">Calcula tu Edad</button>  -->
 
-    <!-- <header id="header">
+  <!-- <header id="header">
     <img src="../image/header.png">
     <h1><em>Blog con Header</em></h1>
     <p>
       <a href="">Botón</a>
     </p></header> -->
 
-    <nav>
-      <input type="checkbox" name="menu" id="menu">
-      <label for="menu"> 
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-</svg>
-</label>
+  <!-- Navegador -->
+  <nav>
+    <input type="checkbox" name="menu" id="menu">
+    <label for="menu">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+        class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+      </svg>
+    </label>
 
     <a class="menu-desplegable" href="../index.html"><img src="../image/mundonatural.png" alt="logo de inicio"></a>
-      <ul class="menu-desplegable">
-        <li><a href="">Nosotros</a></li>
-        <li><a href="">Servicios</a></li>
-        <li><a href="galeria">galeria</a></li>
-      </ul>
-    </nav>
+    <ul class="menu-desplegable">
+      <li><a href="nosotros.html">Estudio</a></li>
+      <li><a href="galeria.html">Paseos</a></li>
+      <li><a href="float.html">Contacto</a></li>
+    </ul>
+  </nav>
 
-    <!-- float -->
-     <article class="noticia">
+  <!-- float -->
+  <!-- <article class="noticia">
         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus odio adipisci ipsum non praesentium aliquid veritatis explicabo accusamus, eos hic provident quidem enim totam? At ut veritatis optio odio ratione.</h1>
         <img class="noticia__img--left" src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp" alt="">
 
         <p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipisicing elit. Deserunt quo recusandae facere distinctio. <a href="https://www.nationalgeographic.com.es/fotografia/foto-del-dia/jugando-antes-cena_26268" target="_blank">Possimus</a> magnam voluptas autem tenetur cupiditate commodi laudantium neque pariatur quam aliquam incidunt, fugiat doloribus?<br> Soluta eos voluptatem iste dolorem amet quas, eaque cupiditate iusto delectus, dignissimos ipsum! Laboriosam repellat sint architecto aliquid quisquam provident itaque atque ut obcaecati natus? <strong>Dignissimos sint totam fugit</strong> ipsa voluptatibus eius dolor provident excepturi consequuntur deleniti delectus aut, quia nam unde quam hic asperiores!<br> Eius earum culpa iusto maiores tempore, sunt cum harum facere consequatur eligendi quos, minima officia fuga praesentium iure magni esse! Consectetur facere modi voluptatum, quasi dolores perspiciatis!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim cupiditate assumenda amet voluptatibus rem dolorem reprehenderit aspernatur velit ab unde atque est, libero dolorum officiis dolor delectus? Temporibus doloribus quasi dolore quam eum, similique ut, necessitatibus nemo, animi dignissimos expedita. Itaque, totam repellat. Ullam numquam laborum temporibus fugiat, deserunt iure nulla deleniti quibusdam quis nostrum tempora, quisquam obcaecati magnam! Laboriosam, laborum? Ullam minima, et illum quo accusantium veritatis vero numquam ea, quisquam ut quas earum consectetur iure vitae dolorum! Aliquid libero in laborum laboriosam quod quae numquam unde suscipit error dignissimos, hic explicabo deleniti accusamus dolore minus laudantium quasi dolores quos dolor non? Tenetur sunt dolorem odio expedita. Expedita corrupti officia porro maxime dolorum perferendis voluptas, amet blanditiis est accusamus corporis doloribus quae a. Ipsum deleniti, similique blanditiis natus repudiandae consequatur laudantium optio perferendis voluptate labore architecto debitis libero quis unde asperiores ad incidunt molestias rem veniam possimus accusamus ab voluptatem pariatur rerum! Officiis accusamus optio omnis ea corporis laudantium quos, voluptate nobis consectetur. Fuga nulla rem id voluptates accusamus quia consectetur obcaecati fugit deserunt distinctio at aut commodi cumque ratione illo repellat ex nesciunt nihil, vero ut alias quam amet enim! Omnis numquam ab ipsam quisquam neque? Nam repellat natus illum! Id natus, corrupti expedita a dolor quam animi et voluptate quaerat! Reiciendis voluptates placeat laboriosam consequuntur quia doloremque sint facilis fugit dicta saepe corrupti assumenda, non voluptatibus illum temporibus aperiam maxime modi id incidunt ullam quidem animi eligendi laborum veniam! Delectus, veniam consectetur omnis praesentium tempora, pariatur soluta itaque ullam sint similique libero. Amet, officia vero pariatur voluptate saepe quos commodi eveniet magni deleniti est dicta non ducimus tempore iure exercitationem impedit aliquam, ipsum itaque molestiae temporibus. Molestiae animi consequatur soluta labore, repellat amet quod aut error. Id illum quisquam debitis! Qui odit earum quibusdam repellendus maiores tempore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim cupiditate assumenda amet voluptatibus rem dolorem reprehenderit aspernatur velit ab unde atque est, libero dolorum officiis dolor delectus? </p>
+      </article> -->
+
+<main>
+
+  <div id="hueco"></div>
+
+  <div class="noticia">
+  <h1>Sobre mí</h1>
+   <img class="noticia__img--none" src="../image/young-woman-lush-tropical-foliage-nature-serenity-concept_1222600-1889.jpg" alt="imagen-chica" />
+
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex nihil debitis quis aspernatur eaque accusantium reiciendis, aut aperiam, sit inventore quod enim sint. Quidem dignissimos odio ea fugiat soluta quia temporibus, reprehenderit vero, atque debitis deleniti aperiam commodi. Nobis vero adipisci, animi ad rem dolore eum temporibus neque cupiditate incidunt vel blanditiis deserunt optio soluta praesentium esse sit atque, quasi repellat explicabo perferendis quibusdam non voluptates iusto. Esse, sint eveniet ratione asperiores repellat veritatis perspiciatis dolor magni ut, consequatur reprehenderit alias debitis nemo, nisi iusto. Nemo consequuntur consectetur repudiandae accusamus.</p>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex nihil debitis quis aspernatur eaque accusantium reiciendis, aut aperiam, sit inventore quod enim sint. Quidem dignissimos odio ea fugiat soluta quia temporibus, reprehenderit vero, atque debitis deleniti aperiam commodi. Nobis vero adipisci, animi ad rem dolore eum temporibus neque cupiditate incidunt vel blanditiis deserunt optio soluta praesentium esse sit atque, quasi repellat explicabo perferendis quibusdam non voluptates iusto. Esse, sint eveniet ratione asperiores repellat veritatis perspiciatis dolor magni ut, consequatur reprehenderit alias debitis nemo, nisi iusto. Nemo consequuntur consectetur repudiandae accusamus.</p>
+</div>
+
+<div>
+  <h1>Momentos de relax</h1>
+
+  <iframe data-testid="embed-iframe" style="border-radius:12px"
+    src="https://open.spotify.com/embed/track/4q6kOc6z2RJ5FXS7w54hR2?utm_source=generator" width="50%" height="352"
+    frameBorder="0" allowfullscreen=""
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  <br><br>
+  <!-- <iframe width="50%" height="370" src="https://www.youtube.com/embed/rqKSFu6ehd0?list=RDrqKSFu6ehd0"
+    title="Work Music for Focus &amp; Productivity | Calm Instrumental Background to Stay in Flow" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+
+  
+
+</div>
+ <div>
+      <article class="noticia">
+        <h2>Jugando antes de la cena</h2>
+        <img class="noticia__img--left"
+          src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
+          alt="">
+        <figcaption><a href="https://www.bearwitnessphoto.com/" target="_blank"><em>Johnny Hayward</em></a></figcaption>
+        <p>En las costas heladas de Manitoba (Canadá), <strong>un oso polar parece olvidarse por un momento de la
+            caza</strong> y se
+          tumba panza arriba sobre el hielo. Rodar de un lado a otro, frotarse contra la nieve o simplemente tumbarse en
+          el suelo gélido es parte de su comportamiento natural: con ello refrescan su cuerpo tras largas caminatas y,
+          de paso, mantienen limpia su densa capa de pelo, fundamental para regular el calor en un entorno tan extremo.
+        </p>
+        <p>La escena captada por el fotógrafo Johnny Hayward coincide con la llamada “<a
+            href="https://www.nationalgeographic.com.es/fotografia/foto-del-dia/jugando-antes-cena_26268"
+            target="_blank">temporada del
+            oso polar</a>” , cuando estos gigantes se concentran cerca de Churchill, el primer lugar de la bahía de
+          Hudson
+          donde se forma el hielo marino. Allí esperan el ansiado momento en que <strong>las aguas se congelen lo
+            suficiente
+            para salir a cazar focas</strong>. Hasta entonces, entre el hambre y la incertidumbre, algunos se regalan un
+          respiro
+          sobre la blanca alfombra helada, recordándonos que incluso los mayores depredadores del Ártico saben tomarse
+          un descanso.
+        </p>
+
       </article>
+    </div>
 
+</main>
 
+  <!-- <script src="../js/index.js"></script> -->
 
-    <!-- <script src="../js/index.js"></script> -->
+  <!-- Pie de página -->
+  <footer>
+    <p>
+      <a href="#hueco">
+        <svg id="boton-arriba2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+          stroke="currentColor" class="size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
+        </svg>
+      </a>
+    </p>
+    <p>Derechos reservados © 2025</p>
+  </footer>
+
 </body>
 
 </html>
