--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <!-- Cabecera -->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,90 +46,194 @@
     </div> -->
 
     <div id="hueco"></div>
-    
+
     <h1 id="galeria">Galería de paseos</h1>
     <h2>Explora la belleza de la naturaleza a través de nuestra colección de paseos al aire libre</h2>
-    <p>Descubre <strong>paisajes impresionantes, flora y fauna diversa, y momentos inolvidables</strong> capturados durante nuestras
-      excursiones. <strong>Cada imagen cuenta una historia</strong> de aventura y conexión con el entorno natural. ¡Inspírate para tu
+    <p>Descubre <strong>paisajes impresionantes, flora y fauna diversa, y momentos inolvidables</strong> capturados
+      durante nuestras
+      excursiones. <strong>Cada imagen cuenta una historia</strong> de aventura y conexión con el entorno natural.
+      ¡Inspírate para tu
       próxima escapada!</p>
 
     <div class="noticia">
       <div>
         <h2> 1. Parque Natural La Pedriza</h2>
         <img class="noticia__img--right" src="../image/Rio-manzanares-la-pedriza.jpg" alt="imagen1" />
-        <p>El <strong>Parque Regional</strong> la Pedriza es <strong>una de las zonas más populares de la sierra de Guadarrama</strong> y
-          uno de los parques naturales cerca de Madrid <strong>preferidos por los escaladores y senderistas</strong>. Vienen atraídos a
-          este berrocal los fines de semana por sus <strong>paredes, riscos y canchales</strong> que conforman un paisaje único en la
+        <p>El <strong>Parque Regional</strong> la Pedriza es <strong>una de las zonas más populares de la sierra de
+            Guadarrama</strong> y
+          uno de los parques naturales cerca de Madrid <strong>preferidos por los escaladores y senderistas</strong>.
+          Vienen atraídos a
+          este berrocal los fines de semana por sus <strong>paredes, riscos y canchales</strong> que conforman un
+          paisaje único en la
           orografía madrileña.</p>
         <p>Aunque existen muchas rutas de diferentes dificultades, es importante informarse antes de lanzarse al camino,
-          especialmente en las estaciones del año más frías. En <strong>verano es un buen momento para refrescarse con el agua
-          del río Manzanares</strong>, que recorre uno de los enclaves más típicos de la naturaleza cerca de
+          especialmente en las estaciones del año más frías. En <strong>verano es un buen momento para refrescarse con
+            el agua
+            del río Manzanares</strong>, que recorre uno de los enclaves más típicos de la naturaleza cerca de
           Madrid.</p>
-          <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia: <strong>15,6 km.</strong></p>
-          <p><img class="noticia__img--none" src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png" alt="crono" />Duración: <strong>5:42 horas.</strong></p>
+        <div id="grid">
+          <div>
+            <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia:
+              <strong>15,6 km.</strong>
+            </p>
+          </div>
+          <div>
+            <p><img class="noticia__img--none"
+                src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png" alt="crono" />Duración:
+              <strong>5:42 horas.</strong>
+            </p>
+          </div>
+        </div>
       </div>
+
       <div>
         <h2> 2. Embalse de El Atazar</h2>
         <img class="noticia__img--left" src="../image/El-Atazar.jpg" alt="imagen2" />
-        <p>En la <strong>sierra Norte</strong> se encuentra este embalse a una hora de Madrid, también es conocido por su enorme tamaño
+        <p>En la <strong>sierra Norte</strong> se encuentra este embalse a una hora de Madrid, también es conocido por
+          su
+          enorme tamaño
           como <strong>el mar de Madrid</strong>. Forma parte del Canal de Isabel II y está rodeado por la denominada
-          Mancomunidad del Embalse de Altazar, en la que se encuentran pueblos tan distinguidos como el <strong>Berrueco</strong>.</p>
+          Mancomunidad del Embalse de Altazar, en la que se encuentran pueblos tan distinguidos como el
+          <strong>Berrueco</strong>.
+        </p>
         <p>Hay diversas rutas de senderismo dependiendo de la dificultad y duración que queramos, aunque hay algunos
           puntos históricos a tener en cuenta, como la <strong>Atalaya Árabe</strong> y el <strong>Puente
             romano</strong>. Sin duda, una parada obligatoria si buscas lugares naturales con encanto cerca de Madrid.
         </p>
-        <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia: <strong>15,94 km.</strong></p>
-        <p><img class="noticia__img--none" src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png" alt="crono" />Duración: <strong>6 horas.</strong></p>
+        <div id="grid">
+          <div>
+            <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia:
+              <strong>15,94 km.</strong>
+            </p>
+          </div>
+          <div>
+            <p><img class="noticia__img--none"
+                src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png" alt="crono" />Duración:
+              <strong>6 horas.</strong>
+            </p>
+          </div>
+        </div>
       </div>
+
       <div>
         <h2> 3. Lagunas de Peñalara</h2>
         <img class="noticia__img--right" src="../image/Lagunas-Peñalara.jpg" alt="imagen3" />
-        <p>El <strong>Parque Natural de Peñalara</strong> es otro de los sitios para visitar en Madrid en la naturaleza: alberga <strong>el pico
-          más alto de la Sierra de Guadarrama</strong> con 2.428 m, y una <strong>serie de lagunas de origen glaciar</strong>. Hay rutas
+        <p>El <strong>Parque Natural de Peñalara</strong> es otro de los sitios para visitar en Madrid en la
+          naturaleza:
+          alberga <strong>el pico
+            más alto de la Sierra de Guadarrama</strong> con 2.428 m, y una <strong>serie de lagunas de origen
+            glaciar</strong>. Hay rutas
           senderistas para todos los niveles, pero para poder disfrutar de las lagunas no tendrás que pasar por tramos
           complicados.</p>
-        <p>De entre las pequeñas lagunas destacan dos: <strong>la Laguna Grande de Peñalara</strong> y la <strong>Laguna
-            de los Pájaros</strong>. La primera, arriba en la foto, es la más visitada y la que tiene la ruta más accesible.</p>
-          <p>Y para completar un día perfecto, podemos ir a comer a <strong>Cercedilla o Rascafría</strong>, dos bonitos pueblos de la sierra madrileña donde se come muy bien.</p>
-        <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia: <strong>14 km.</strong> de trayecto circular.</p>
-        <p><img class="noticia__img--none" src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png" alt="crono" />Duración: <strong> 7 horas.</strong></p>
+        <p>De entre las pequeñas lagunas destacan dos: <strong>la Laguna Grande de Peñalara</strong> y la
+          <strong>Laguna
+            de los Pájaros</strong>. La primera, arriba en la foto, es la más visitada y la que tiene la ruta más
+          accesible.
+        </p>
+        <p>Y para completar un día perfecto, podemos ir a comer a <strong>Cercedilla o Rascafría</strong>, dos bonitos
+          pueblos de la sierra madrileña donde se come muy bien.</p>
+        <div id="grid">
+          <div>
+            <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia:
+              <strong>14
+                km.</strong> de trayecto circular.
+            </p>
+          </div>
+          <div>
+            <p><img class="noticia__img--none"
+                src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png" alt="crono" />Duración:
+              <strong> 7 horas.</strong>
+            </p>
+          </div>
+        </div>
       </div>
+
       <div>
         <h2> 4. Puerto de Canencia</h2>
         <img class="noticia__img--left" src="../image/Puerto-Canencia.jpg" alt="imagen4" />
-        <p>A una hora y cuarto de la capital encontramos este tesoro de la naturaleza madrileña, un <strong>abedular con
-            arroyo incluido</strong>. El Puerto de Canencia está repleto de cascadas y de rutas senderistas, pero la más
+        <p>A una hora y cuarto de la capital encontramos este tesoro de la naturaleza madrileña, un <strong>abedular
+            con
+            arroyo incluido</strong>. El Puerto de Canencia está repleto de cascadas y de rutas senderistas, pero la
+          más
           conocida es la <strong>Chorrera de Mojonvalle</strong>. </p>
-        <p>La zona está también repleta de <strong>pinos y robles de hoja caduca</strong> que ayudan a crear ese <strong>paraje
-          tan otoñal.</strong> Además de las rutas, es una buena oportunidad para visitar el municipio que da nombre al puerto y
-          hacer algo de turismo local dentro de Madrid.</p>
-       <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia: <strong>8 km.</strong></p>
-       <p><img class="noticia__img--none" src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png" alt="crono" />Duración: <strong> 2,5-3 horas.</strong></p>
+        <p>La zona está también repleta de <strong>pinos y robles de hoja caduca</strong> que ayudan a crear ese
+          <strong>paraje
+            tan otoñal.</strong> Además de las rutas, es una buena oportunidad para visitar el municipio que da nombre
+          al
+          puerto y
+          hacer algo de turismo local dentro de Madrid.
+        </p>
+        <div id="grid">
+          <div>
+            <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia:
+              <strong>8
+                km.</strong>
+            </p>
+          </div>
+          <div>
+            <p><img class="noticia__img--none"
+                src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png" alt="crono" />Duración:
+              <strong> 2,5-3 horas.</strong>
+            </p>
+          </div>
+        </div>
       </div>
+
       <div>
         <h2> 5. Las Cárcavas</h2>
         <img class="noticia__img--right" src="../image/Carcavas-madrid.jpg" alt="imagen5" />
         <p>La ruta para llegar a Las Cárcavas comienza en la <strong>presa de Pontón de la Oliva</strong>, justo en la
-          frontera entre la Comunidad de Madrid y Guadalajara. Este paisaje protegido —parecido al que podemos encontrar
+          frontera entre la Comunidad de Madrid y Guadalajara. Este paisaje protegido —parecido al que podemos
+          encontrar
           en las <strong>Barrancas de Burujón</strong> — se forma por la <strong>erosión remontante del agua en las
             tierras</strong> con poca sujeción vegetal.</p>
-        <p>Para llegar hasta ellas hay <strong> dos caminos</strong>: uno corta, de unas dos horas, con una gran cuesta
+        <p>Para llegar hasta ellas hay <strong> dos caminos</strong>: uno corta, de unas dos horas, con una gran
+          cuesta
           inicial, pero más directa a las Cárcavas, y otro más largo y circular, pensada para pasar el día.</p>
-        <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia: <strong>12 km.</strong></p>
-        <p><img class="noticia__img--none" src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png" alt="crono" />Duración: <strong>3:30 horas.</strong></p>
+        <div id="grid">
+          <div>
+            <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia:
+              <strong>12
+                km.</strong>
+            </p>
+          </div>
+          <div>
+            <p><img class="noticia__img--none"
+                src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png" alt="crono" />Duración:
+              <strong>3:30 horas.</strong>
+            </p>
+          </div>
+        </div>
       </div>
+
+
       <div>
         <H2> 6. El bosque finlandés</H2>
         <img class="noticia__img--left" src="../image/Bosque-Finlandes-Rascafria.jpg" alt="imagen6" />
-        <p>En <strong>Rascafría</strong>, uno de los pueblos más fríos de Madrid, hay un paraje de <strong>abedules, chopos y abetos que
+        <p>En <strong>Rascafría</strong>, uno de los pueblos más fríos de Madrid, hay un paraje de <strong>abedules,
+            chopos y abetos que
             se ha apodado como el bosque finlandés</strong>.</p>
-        <p>Tiene un pequeño estanque que ayuda a crear este paisaje de apariencia escandinava, con embarcadero y cabaña
-          de madera incluida, que está justo en frente del 
-          <strong>Real Monasterio de Santa María de El Paular</strong>. El paseo siguiendo el <strong>río Lozoya</strong> es sencillo y
+        <p>Tiene un pequeño estanque que ayuda a crear este paisaje de apariencia escandinava, con embarcadero y
+          cabaña
+          de madera incluida, que está justo en frente del
+          <strong>Real Monasterio de Santa María de El Paular</strong>. El paseo siguiendo el <strong>río
+            Lozoya</strong>
+          es sencillo y
           tiene un encanto especial en cada época del año gracias a los árboles de hoja caduca que lo rodean.
-        </p> 
-        <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia: <strong>5 km.</strong></p>
-        <p><img class="noticia__img--none" src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png" alt="crono" />Duración: <strong>3 horas.</strong></p>
+        </p>
+        <div id="grid">
+          <div>
+        <p><img class="noticia__img--none" src="../image/261womanwalking2_100377.png" alt="mujer" /> Distancia:
+          <strong>5
+            km.</strong>
+        </p>
+         </div>
+          <div>
+        <p><img class="noticia__img--none" src="../image/3890934-clock-event-planner-stopwatch-time-watch_111186.png"
+            alt="crono" />Duración:
+          <strong>3 horas.</strong>
+        </p>
+        
       </div>
     </div>
 
